<resources>
    <string name="app_name">NMedia</string>
    <string name="text_media">NMedia!</string>
    <string name="enter_text">Enter text</string>
    <string name="sent">Send</string>
    <string name="edit_post">Editing text</string>
    <string name="cancel">Cancel</string>
    <string name="picture">picture</string>
    <string name="avatar">Avatar</string>
    <string name="text_like">Like</string>
    <string name="name_menubutton">menuButton</string>
    <string name="add_post">Add</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="text_enter_video">Enter URL for video</string>
    <string name="notification_user_liked">%1$s поставил лайк посту %2$s</string>
    <string name="msg_token_fmt">Token: %1$s</string>
    <string name="chanel_remote_name">Chanel</string>
    <string name="chanel_remote_description">Description</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="description_photo">Photo</string>
    <string name="hint_text_login">Login</string>
    <string name="hint_text_password">Password</string>
    <string name="registraton">Registration</string>
    <string name="save_me">Save me</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
</resources>
